# acies-os

./: .gitignore  justfile  main.py  pyproject.toml  readme.md
.github/workflows/: docs.yml
docs/: genindex.html  index.md  searchindex.js  watch-doc.py
docs/_build/: index.html  objects.inv  search.html
docs/_build/.doctrees/: environment.pickle  getting-started.doctree  index.doctree
docs/_build/_sources/: getting-started.md.txt
docs/_sources/: getting-started.md.txt
docs/html/: .buildinfo  getting-started.html
docs/html/.doctrees/: environment.pickle  getting-started.doctree  index.doctree
docs/source/: conf.py  getting-started.md  guided-setup.md  index.md  sys-installation.md  test.md
docs/source/_static/css/: custom.css
sphinx/: conf.py
src/controller/: base.py  buffer.py  state.py
src/twin/: sync.py  twinctl.py
src/vehicle_classifier/: base.py  buffer.py  deepsense.py  ds.py  foundationsense.py  neusymbolic.py  simple.py  utils.py  vfm.py
