[project]
name = "acies-os"
version = "0.2.2"
description = "A Content-Centric Platform for Edge AI Twinning and Orchestration"
authors = [
    { name = "Jinyang Li", email = "jinyang7@illinois.edu" },
    { name = "Yizhuo Chen", email = "yizhuoc@illinois.edu" },
    { name = "Tianshi Wang", email = "tianshi34@illinois.edu" },
    { name = "Tommy Kimura", email = "tkimura4@illinois.edu" },
    { name = "Denizhan Kara", email = "kara4@illinois.edu" },
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/acies"]

[project.scripts]
acies-vfm = "acies.vehicle_classifier.vfm:main"
acies-controller = "acies.controller.base:main"
acies-twinctl = "acies.twin.twinctl:main"

[tool.ruff]
line-length = 120
lint.extend-select = ['Q', 'RUF100', 'C90', 'I']
lint.unfixable = ['F401']
lint.flake8-quotes = { inline-quotes = 'single', multiline-quotes = 'double' }
lint.mccabe = { max-complexity = 13 }
format = { quote-style = 'single' }

[dependency-groups]
dev = [
    "myst-parser>=4.0.1",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx>=8.1.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-copybutton>=0.5.2",
]
